--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,27 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
+
   welcome: circleci/welcome-orb@0.4.1
+  
 # Orchestrate or schedule a set of jobs
-jobs:
-  print_hello:
+
+jobs: # planning to run some jobs
+  print_hello: # name of jobs
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo hello
-  print_world:
+      - run: echo "Good morning Walexkino!"
+  print_world: # the name of the jobs
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo world
+      - run: echo "We hope you enjoy your stay here. " # the run command for the jobs
 workflows:
-  # Name the workflow "welcome"
+  # Name the workflow "welcomen"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
