--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,22 +10,27 @@ orbs:
 # Orchestrate or schedule a set of jobs
 
 jobs: # planning to run some jobs
+
+#first jobs
   print_hello: # name of jobs
     docker:
       - image: circleci/node:13.8.0
     steps:
       - run: echo "Good morning Walexkino!"
+
+#second jobs more of like a multi-stage piple line
   print_cruise: # the name of the jobs
     docker:
-      - image: circleci/node:13.8.0
+      - image: circleci/node:13.8.0 #docker imagine
     steps:
       - run: echo "We hope you enjoy your stay here. " # the run command for the jobs
+
 workflows:
   # Name the workflow "welcomen"
-  welcome:
-    # Run the welcome/run job in its own container
+  welcomePapy:
+    # Run the welcomePapy/run job in its own container
     jobs:
-      - welcome/run
+      - welcomePapy/run
       - print_hello
       - print_cruise:
           requires:
