--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
 
-  welcome: circleci/welcome-orb@0.4.1
+  welcomePapy: circleci/welcome-orb@0.4.1
   
 # Orchestrate or schedule a set of jobs
 
