--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs: # planning to run some jobs
       - run: 
           name: "it echoes the env var that i decleared in the circleci "
           command: |
-            echo "$CIRCLE_PROJECT_USERNAME is my first car."  
+            echo "$CRUISE_ME is my first car."  
 
 workflows:
   # Name the workflow "welcomePapy"
