--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs: # planning to run some jobs
           paths:
             - output.txt
 
-  print_output_file
+  print_output_file:
     docker:
       - image: circleci/node:13.8.0
     steps:
