print pipeline ID

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,17 @@ version: 2.1
 
 jobs: # planning to run some jobs
 
+
+  print_pipeline_id:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: 
+          name: "it echoes the env var that i decleared"
+          command: |
+            echo "$CIRCLE_WORKFLOW_ID"  
+
+
 #first job
   save_hello_world_output: # name of the stages
     docker:
@@ -52,6 +63,7 @@ workflows:
   my_workflow:
     # Run the welcomePapy/run job in its own container
     jobs:
+      - print_pipeline_id:
       - save_hello_world_output
       - print_output_file:
           requires: #requires the below stage to run before it runs the second stage
